testdata/baselines/reference/submodule/conformance/grammarErrors.errors.txt
/b.ts(1,8): error TS1363: A type-only import can specify a default import or named bindings, but not both.
/c.ts(4,1): error TS1392: An import alias cannot use 'import type'


==== /a.ts (0 errors) ====
    export default class A {}
    export class B {}
    export class C {}
    
==== /b.ts (1 errors) ====
    import type A, { B, C } from './a';
           ~~~~~~~~~~~~~~~~
!!! error TS1363: A type-only import can specify a default import or named bindings, but not both.
    
==== /a.js (0 errors) ====
    import type A from './a';
    export type { A };
    
==== /c.ts (1 errors) ====
    namespace ns {
      export class Foo {}
    }
    import type Foo = ns.Foo;
    ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1392: An import alias cannot use 'import type'
    